//Server:
//protoc -I $GOPATH/src/productinfo/proto $GOPATH/src/productinfo/proto/order_management.proto --go_out=plugins=grpc:$GOPATH/src/productinfo/service/ecommerce
//
//Client:
//protoc -I $GOPATH/src/productinfo/proto $GOPATH/src/productinfo/proto/order_management.proto --go_out=plugins=grpc:$GOPATH/src/productinfo/client/ecommerce
syntax = "proto3";

import "google/protobuf/wrappers.proto";

package ecommerce;

option go_package = "./";

service OrderManagement {
  rpc addOrder(Order) returns (google.protobuf.StringValue);
  rpc getOrder(google.protobuf.StringValue) returns (Order);
  rpc processOrders(stream google.protobuf.StringValue) returns (stream CombinedShipment);
}

message Order {
  string id = 1;
  repeated string items = 2;
  string description = 3;
  float price = 4;
  string destination = 5;
}

message CombinedShipment {
  string id = 1;
  string status = 2;
  repeated Order ordersList = 3;
}
